# IN424_2020_2021

./: README.md
project_in424_description/: package.xml
project_in424_description/launch/: simu.launch
project_in424_navigation/: package.xml
project_in424_navigation/launch/: agent.launch
project_in424_navigation/scripts/: my_agent.py
